After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687469 - mulawdec: integer overrun with large chunks of data
mulawdec: integer overrun with large chunks of data
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.10.x
Other All
: Normal major
: 1.0.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-02 17:01 UTC by Roland Krikava
Modified: 2012-11-26 15:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mulawdec int overrun fix (869 bytes, patch)
2012-11-02 17:01 UTC, Roland Krikava
committed Details | Review

Description Roland Krikava 2012-11-02 17:01:17 UTC
Created attachment 227914 [details] [review]
mulawdec int overrun fix

Integer overrun in mulaw_decode causing either segfault or infinite loop.
Comment 1 Tim-Philipp Müller 2012-11-24 14:35:09 UTC
Thanks for the patch!

 commit 3be45f70220310ec1c60d819f90b5f2ae03b5d83
 Author: Roland Krikava <rkrikava@gmail.com>
 Date:   Fri Nov 2 12:38:44 2012 -0400

    mulawdec: fix integer overrun
    
    There might be more than 65535 samples in a chunk of data.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687469
Comment 2 Nicola 2012-11-26 15:05:21 UTC
can this patch be pushed to 0.10 too? thanks